--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2>family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
 * {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
+    padding: 0;
     font-family: 'Spartan', sans-serif;
 }
 
@@ -44,4 +44,42 @@ p {
 body {
     width: 100%;
 }
+
+/* Header Start */
+
+#header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 80px;
+    background-color: #E3E6F3;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+}
+
+#navbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+#navbar li {
+    list-style: none;
+    padding: 20px;
+}
+
+#navbar li a {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: #1a1a1a;
+    transition: 0.3s ease;
+
+}
+
+#navbar li a:hover,
+#navbar li a.active {
+    color: #088178;
+}
+/* Home page */
 
