--- a/styles.css
+++ b/styles.css
@@ -709,6 +709,36 @@ footer .copyright {
     background-image: url(img/about/banner.png);
 }
 
+#about-head img {
+    width: 50%;
+    height: auto;
+}
+
+#about-head.section-p1 {
+    display: flex;
+    align-items: center;
+}
+
+#about-head div {
+    padding-left: 40px;
+}
+
+#about-app {
+    text-align: center;
+}
+
+#about-app .video {
+    width: 70%;
+    height: 100%;
+}
+
+#about-app .video video {
+    width: 100%;
+    height: 100%;
+    border-radius: ;
+}
+
+
 /* Contact Page */
 
 /* Cart */
