--- a/styles.css
+++ b/styles.css
@@ -730,12 +730,13 @@ footer .copyright {
 #about-app .video {
     width: 70%;
     height: 100%;
+    margin: 30px auto 0 auto;
 }
 
 #about-app .video video {
     width: 100%;
     height: 100%;
-    border-radius: ;
+    border-radius: 20px;
 }
 
 
