--- a/styles.css
+++ b/styles.css
@@ -709,14 +709,14 @@ footer .copyright {
     background-image: url(img/about/banner.png);
 }
 
+#about-head {
+    display: flex;
+    align-items: center;
+}
+
 #about-head img {
     width: 50%;
     height: auto;
-}
-
-#about-head.section-p1 {
-    display: flex;
-    align-items: center;
 }
 
 #about-head div {
@@ -738,7 +738,6 @@ footer .copyright {
     height: 100%;
     border-radius: 20px;
 }
-
 
 /* Contact Page */
 
@@ -940,4 +939,16 @@ footer .copyright {
     #blog .blog-details {
         width: 100%;
     }
+
+    /* About Page*/
+
+    #about-head {
+        flex-direction: column;
+    }
+
+    #about-head img {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
 }
