--- a/styles.css
+++ b/styles.css
@@ -570,6 +570,7 @@ footer .copyright {
 }
 
 /*Single Product*/
+
 #prodetails {
     display: flex;
     margin-top: 20px;
@@ -741,9 +742,57 @@ footer .copyright {
 
 /* Contact Page */
 
-#page-header.contact-header {
-    background-image: url(img/banner/);
+#contact-details {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+
+#contact-details .details {
+    width: 40%;
+}
+
+#contact-details .details span {
+    font: 12px;
+}
+
+#contact-details .details h2 {
+    font-size: 26px;
+    line-height: 35px;
+    padding: 20px 0;
+}
+
+#contact-details .details h3 {
+    font-size: 16px;
+    padding-bottom: 15px;
+}
+
+#contact-details .details li {
+    list-style: none;
+    display: flex;
+    padding: 10px 0;
+}
+
+#contact-details .details li i {
+    font-size: 14px;
+    padding-right: 22px;
+}
+
+#contact-details .details li p {
+    margin: 0;
+    font-size: 14px;
+}
+
+#contact-details .map {
+    width: 55%;
+    height: 400px;
+}
+
+#contact-details .map iframe {
+    width: 100%;
+    height: 100%;
+}
+
 
 /* Cart */
  
