--- a/styles.css
+++ b/styles.css
@@ -752,11 +752,13 @@ footer .copyright {
     width: 40%;
 }
 
-#contact-details .details span {
+#contact-details .details span,
+#form-details form span {
     font: 12px;
 }
 
-#contact-details .details h2 {
+#contact-details .details h2,
+#form-details form h2 {
     font-size: 26px;
     line-height: 35px;
     padding: 20px 0;
@@ -791,6 +793,13 @@ footer .copyright {
 #contact-details .map iframe {
     width: 100%;
     height: 100%;
+}
+
+#form-details form {
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 
