--- a/styles.css
+++ b/styles.css
@@ -802,6 +802,32 @@ footer .copyright {
     align-items: flex-start;
 }
 
+#form-details form input,
+#form-details form textarea {
+    width: 100%;
+    padding: 12px 15px;
+    outline: none;
+    margin-bottom: 20px;
+    border: 1px solid #e1e1e1;
+}
+
+#form-details form button {
+    background-color: #088178;
+    color: #fff;
+}
+
+#form-details {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#form-details .people div img {
+    width: 65px;
+    height: 65px;
+    object-fit: cover; /* To add cover to the photo */
+    margin-right: 15px;
+}
 
 /* Cart */
  
