--- a/styles.css
+++ b/styles.css
@@ -818,8 +818,16 @@ footer .copyright {
 
 #form-details {
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    margin: 30px;
+    padding: 80px;border: 1px solid #e1e1e1;
+}
+
+#form-details .people div {
+    padding-bottom: 25px;
+    display: flex;
+    align-items: flex-start; /* To put all of the items (divs) into the start of the line (flex-start) */
+    
 }
 
 #form-details .people div img {
@@ -827,6 +835,19 @@ footer .copyright {
     height: 65px;
     object-fit: cover; /* To add cover to the photo */
     margin-right: 15px;
+}
+
+#form-details .people div p {
+    margin: 0;
+    font-size: 13px;
+    line-height: 25px;
+}
+
+#form-details .people div p span {
+    display: block;
+    font-size: 16px;
+    font-weight: 600;
+    color: #000;
 }
 
 /* Cart */
@@ -926,6 +947,17 @@ footer .copyright {
     #newsletter .form {
         width: 70%;
     }
+
+    /* Contact Page */
+    #form-details {
+        padding: 40px;
+    }
+
+    #form-details form {
+        width: 50%;
+    }
+
+
 }
 
 @media (max-width: 477px) {
@@ -1045,6 +1077,32 @@ footer .copyright {
 
     #about-app .video {
         width: 100%;
+    }
+
+    /* Contact Page */
+
+    #contact-details {
+        flex-direction: column;
+    }
+
+    #contact-details .details {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    #contact-details .map {
+        width: 100%;
+    }
+
+    #form-details {
+        margin: 10px;
+        padding: 30px 10px;
+        flex-wrap: wrap;
+    }
+
+    #form-details form {
+        width: 100%;
+        margin-bottom: 30px;
     }
 
 }
