Changing the google font to 'League Spartan'

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 /*It is called responsive web design when you use CSS and HTML to resize, hide, shrink, enlarge, or move the content to make it look good on any screen.*/
-@import url('https://fonts.googleapis.com/css2>family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100&display=swap');
 * {
     margin: 0;
     box-sizing: border-box;
     padding: 0;
-    font-family: 'Spartan', sans-serif;
+    font-family: 'League Spartan', sans-serif;
 }
 
 h1 {
