--- a/styles.css
+++ b/styles.css
@@ -903,7 +903,36 @@ footer .copyright {
     padding: 18px 0;
 }
 
+#cart table tbody tr td {
+   padding-top: 15px; 
+}
 
+#cart table tbody td {
+    font-size: 13px;
+}
+
+#cart-add {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#coupon {
+    width: 50%;
+    margin-bottom: 30px;
+}
+
+#coupon h3 {
+    padding-bottom: 15px;
+}
+
+#coupon input {
+    padding: 10px 20px;
+    outline: none;
+    width: 60%;
+    margin-right: 10px;
+    border: 1px solid #e2e9e1;
+}
 
 
 
