--- a/styles.css
+++ b/styles.css
@@ -850,7 +850,11 @@ footer .copyright {
     color: #000;
 }
 
-/* Cart */
+/* Cart Page */
+
+#cart {
+    overflow-x: auto;
+}
 
 #cart table {
     width: 100%;
@@ -922,7 +926,8 @@ footer .copyright {
     margin-bottom: 30px;
 }
 
-#coupon h3 {
+#coupon h3,
+#subtotal h3 {
     padding-bottom: 15px;
 }
 
@@ -934,6 +939,32 @@ footer .copyright {
     border: 1px solid #e2e9e1;
 }
 
+#coupon button,
+#subtotal button {
+    background-color: #088178;
+    color: #fff;
+    padding: 12px 20px;
+}
+
+#subtotal {
+    width: 50%;
+    margin-bottom: 30px;
+    border: 1px solid #e2e9e1;
+    padding: 30px;
+}
+
+#subtotal table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 20px;
+}
+
+#subtotal table td {
+    width: 50%;
+    border: 1px solid #e2e9e1;
+    padding: 10px;
+    font-size: 13px;
+}
 
 
 /* Start Media Query */
